--- a/mainweb/css/styles.css
+++ b/mainweb/css/styles.css
@@ -3,7 +3,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-    background-color: black;
+    background: url('../images/black-hole-background.jpg') no-repeat center center fixed;
+    background-size: cover;
     color: white;
 }
 
@@ -30,7 +31,7 @@ p {
     color: red;
 }
 
-/* Fix layout for home page */
+/* Header and content */
 header {
     background-color: rgba(0, 0, 0, 0.8);
     padding: 20px;
