--- a/mainweb/css/styles.css
+++ b/mainweb/css/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-    background: url('../images/black-hole-background.jpg') no-repeat center center fixed;
+    background: url('https://wallpapers.com/images/hd/red-space-1920-x-1200-background-0sy57akyjme22bhh.jpg') no-repeat center center fixed;
     background-size: cover;
     color: white;
     overflow-x: hidden;
